Add sharing as image functionality

--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -28,7 +28,6 @@
     <TextView
         android:id="@+id/text_modal_price"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -89,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/modal_price_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -100,7 +99,7 @@
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:text="@string/min_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -114,7 +113,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
         tools:text="\u20B9 3500 per 100kg*" />
@@ -124,7 +122,7 @@
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:text="@string/max_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -138,7 +136,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
         tools:text="\u20B9 4000 per 100kg*" />
@@ -148,7 +145,7 @@
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:text="@string/arrival_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -161,7 +158,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
         tools:text="30/05/2017"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         android:layout_marginTop="4dp"
