--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <!--Material palette: Teal-->
     <color name="teal_500">#009688</color> <!-- Primary -->
-    <color name="teal_700">#00796B</color>  <!-- Primary Dark -->
+    <color name="teal_700">#00796b</color>  <!-- Primary Dark -->
     <color name="teal_A100">#A7FFEB</color> <!-- Bottom bar ripple -->
 
     <!--Material palette: Green-->
-    <color name="green_A200">#69F0AE</color> <!-- Accent -->
+    <color name="green_A200">#69f0ae</color> <!-- Accent -->
 
     <!--Material palette: Pink-->
     <color name="pink_A200">#FF4081</color>
