--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -165,19 +165,10 @@
 
     <TextView
         android:id="@+id/details_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
+        style="@style/CardActionTextBtn"
         android:drawableLeft="@drawable/more_detail_state"
-        android:drawablePadding="8dp"
         android:drawableStart="@drawable/more_detail_state"
-        android:padding="@dimen/card_action_button_padding"
         android:text="@string/details_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="@color/light_grey"
-        android:textSize="14sp"
-        android:textStyle="bold"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
@@ -185,40 +176,21 @@
 
     <TextView
         android:id="@+id/favorite_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:drawableLeft="@drawable/bookmark_fill"
-        android:drawablePadding="8dp"
-        android:drawableStart="@drawable/bookmark_fill"
-        android:gravity="center"
-        android:padding="@dimen/card_action_button_padding"
+        style="@style/CardActionTextBtn"
         android:text="@string/favorite_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textColor="@color/bookmark_states"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        android:drawableLeft="@drawable/bookmark_fill"
+        android:drawableStart="@drawable/bookmark_fill"
         app:layout_constraintLeft_toRightOf="@+id/details_icon"
         app:layout_constraintRight_toLeftOf="@+id/share_icon"
         app:layout_constraintTop_toTopOf="@+id/details_icon" />
 
     <TextView
         android:id="@+id/share_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:clickable="true"
-        android:drawableLeft="@drawable/share_state"
-        android:drawablePadding="8dp"
-        android:drawableStart="@drawable/share_state"
-        android:gravity="center"
-        android:padding="@dimen/card_action_button_padding"
+        style="@style/CardActionTextBtn"
         android:text="@string/share_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textColor="@color/light_grey"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        android:drawableLeft="@drawable/share_state"
+        android:drawableStart="@drawable/share_state"
         app:layout_constraintLeft_toRightOf="@+id/favorite_icon"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/details_icon" />
