--- a/app/src/main/res/layout/favorites_card_row_more.xml
+++ b/app/src/main/res/layout/favorites_card_row_more.xml
@@ -7,17 +7,7 @@
 
     <TextView
         android:id="@+id/text_variety"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:paddingEnd="24dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="24dp"
-        android:paddingStart="0dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
+        style="@style/CardFirstRowText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,28 +16,14 @@
 
     <TextView
         android:id="@+id/text_unit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/unit_of_price"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        style="@style/CardPriceUnit"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price" />
 
     <TextView
         android:id="@+id/text_market_district"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:maxLines="2"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardSecondRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/text_unit_price"
         app:layout_constraintTop_toBottomOf="@+id/text_variety"
@@ -55,26 +31,15 @@
 
     <TextView
         android:id="@+id/text_state_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        style="@style/CardThirdRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district"
         tools:text="Andhra Pradesh" />
 
     <TextView
         android:id="@+id/header_modal_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/modal_price_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -82,20 +47,15 @@
 
     <TextView
         android:id="@+id/text_modal_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_state_name"
         tools:text="\u20B9 3950 per 100kg*" />
 
     <TextView
         android:id="@+id/header_min_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/min_price_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_min_price"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -103,20 +63,15 @@
 
     <TextView
         android:id="@+id/text_min_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
         tools:text="\u20B9 3500 per 100kg*" />
 
     <TextView
         android:id="@+id/header_max_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/max_price_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_max_price"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -124,20 +79,15 @@
 
     <TextView
         android:id="@+id/text_max_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
         tools:text="\u20B9 4000 per 100kg*" />
 
     <TextView
         android:id="@+id/header_arrival"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/arrival_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_arrival_date"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -145,10 +95,7 @@
 
     <TextView
         android:id="@+id/text_arrival_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_max_price"
         tools:text="30/05/2017" />
