--- a/app/src/main/res/layout/commodity_detail_card_row_more.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row_more.xml
@@ -6,35 +6,15 @@
 
     <TextView
         android:id="@+id/text_market"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="18sp"
+        style="@style/CardFirstRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Chirala market"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/text_district"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:maxLines="1"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
+        style="@style/CardSecondRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_market"
         tools:text="Prakasam district"
@@ -42,30 +22,16 @@
 
     <TextView
         android:id="@+id/text_state_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
-        android:paddingTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
+        style="@style/CardThirdRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         tools:text="Andhra Pradesh"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="0dp"
         app:layout_constraintTop_toBottomOf="@+id/text_district"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent" />
-
 
     <TextView
         android:id="@+id/header_modal_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/modal_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -74,20 +40,14 @@
 
     <TextView
         android:id="@+id/text_modal_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="18sp"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_state_name"
         tools:text="\u20B9 3950 per 100kg*" />
 
     <TextView
         android:id="@+id/header_min_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/min_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -96,10 +56,7 @@
 
     <TextView
         android:id="@+id/text_min_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
+        style="@style/CardPriceHeaderAndPrice"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
@@ -107,9 +64,7 @@
 
     <TextView
         android:id="@+id/header_max_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/max_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -118,20 +73,14 @@
 
     <TextView
         android:id="@+id/text_max_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="18sp"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
         tools:text="\u20B9 4000 per 100kg*" />
 
     <TextView
         android:id="@+id/header_arrival"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/arrival_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -140,10 +89,7 @@
 
     <TextView
         android:id="@+id/text_arrival_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="18sp"
+        style="@style/CardPriceHeaderAndPrice"
         tools:text="30/05/2017"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         android:layout_marginTop="4dp"
@@ -151,13 +97,8 @@
 
     <TextView
         android:id="@+id/text_unit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="4dp"
+        style="@style/CardPriceUnit"
         android:visibility="gone"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
         android:text="@string/unit_of_price" />
