--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -8,29 +8,17 @@
 
     <TextView
         android:id="@+id/text_variety"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:paddingEnd="24dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="24dp"
-        android:paddingStart="0dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textStyle="bold"
+        style="@style/CardFirstRowText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Arecal betlanut  long long long long  long long long long  long long long long  long long long long" />
+        tools:text="Arecal betlanut long long long long lon" />
 
     <TextView
         android:id="@+id/text_modal_price"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -39,27 +27,13 @@
 
     <TextView
         android:id="@+id/text_unit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        style="@style/CardPriceUnit"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
-        android:text="@string/unit_of_price" />
+        app:layout_constraintTop_toBottomOf="@+id/text_modal_price" />
 
     <TextView
         android:id="@+id/text_market_district"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:maxLines="2"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
+        style="@style/CardSecondRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_variety"
         tools:text="Chirala market, Prakasam district lonwer"
@@ -67,28 +41,17 @@
 
     <TextView
         android:id="@+id/text_state_name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:paddingEnd="16dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="16dp"
-        android:paddingStart="0dp"
+        style="@style/CardThirdRowText"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         tools:text="Andhra Pradesh"
-        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
 
 
     <TextView
         android:id="@+id/header_modal_price"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/modal_price_header"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        android:visibility="gone"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -97,9 +60,7 @@
     <TextView
         android:id="@+id/header_min_price"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/min_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -109,9 +70,7 @@
     <TextView
         android:id="@+id/text_min_price"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        style="@style/CardPriceHeaderAndPrice"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
@@ -120,9 +79,7 @@
     <TextView
         android:id="@+id/header_max_price"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/max_price_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -132,10 +89,7 @@
     <TextView
         android:id="@+id/text_max_price"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
         tools:text="\u20B9 4000 per 100kg*" />
@@ -143,9 +97,7 @@
     <TextView
         android:id="@+id/header_arrival"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         android:text="@string/arrival_header"
         app:layout_constraintRight_toRightOf="@+id/price_guideline"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
@@ -155,9 +107,7 @@
     <TextView
         android:id="@+id/text_arrival_date"
         android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        style="@style/CardPriceHeaderAndPrice"
         tools:text="30/05/2017"
         app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
         android:layout_marginTop="4dp"
