--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -120,8 +120,7 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
 
     <TextView
         android:id="@+id/favorite_icon"
