--- a/app/src/main/res/layout/commodity_detail_card_row_more.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row_more.xml
@@ -113,8 +113,7 @@
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/text_arrival_date" />
 
     <TextView
         android:id="@+id/favorite_icon"
