--- a/app/src/main/res/layout/favorites_card_row_more.xml
+++ b/app/src/main/res/layout/favorites_card_row_more.xml
@@ -37,34 +37,33 @@
         tools:text="Andhra Pradesh" />
 
     <TextView
+        android:id="@+id/text_modal_price"
+        style="@style/CardPriceHeaderAndPrice"
+        app:layout_constraintStart_toStartOf="@+id/text_min_price"
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
+        tools:text="\u20B9 3950 per 100kg*" />
+
+    <TextView
         android:id="@+id/header_modal_price"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/modal_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_modal_price"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="@+id/price_guideline" />
-
-    <TextView
-        android:id="@+id/text_modal_price"
-        style="@style/CardPriceHeaderAndPrice"
-        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
-        tools:text="\u20B9 3950 per 100kg*" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/header_min_price"
         style="@style/CardPriceHeaderAndPrice"
         android:text="@string/min_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_min_price"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="@+id/price_guideline" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/text_min_price"
         style="@style/CardPriceHeaderAndPrice"
-        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintStart_toEndOf="@+id/header_min_price"
         app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
         tools:text="\u20B9 3500 per 100kg*" />
 
@@ -74,13 +73,12 @@
         android:text="@string/max_price_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_max_price"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="@+id/price_guideline" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/text_max_price"
         style="@style/CardPriceHeaderAndPrice"
-        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
+        app:layout_constraintStart_toStartOf="@+id/text_min_price"
         app:layout_constraintTop_toBottomOf="@+id/text_min_price"
         tools:text="\u20B9 4000 per 100kg*" />
 
@@ -90,13 +88,12 @@
         android:text="@string/arrival_header"
         app:layout_constraintBaseline_toBaselineOf="@+id/text_arrival_date"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintRight_toRightOf="@+id/price_guideline" />
+        app:layout_constraintLeft_toLeftOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/text_arrival_date"
         style="@style/CardPriceHeaderAndPrice"
-        app:layout_constraintLeft_toLeftOf="@+id/price_guideline"
+        app:layout_constraintStart_toStartOf="@+id/text_max_price"
         app:layout_constraintTop_toBottomOf="@+id/text_max_price"
         tools:text="30/05/2017" />
 
@@ -141,11 +138,5 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <android.support.constraint.Guideline
-        android:id="@+id/price_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35" />
 
 </android.support.constraint.ConstraintLayout>
